<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewld"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".LectureDetails">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/AppCompactTextViewLectureDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ld"
            android:textSize="40dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTeacherBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTeacherBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_branch"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTeacherSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTeacherSemester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_semester"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTeacherSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTeacherSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_subject"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_time"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>





        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonTeacherLectureD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:onClick="SubmitLectureDetails"
            android:background="@color/colorTextHint"
            android:text="@string/submit" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>