<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AD"
            android:textSize="25sp" />



        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewStudentNameAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:text="@string/text_accounts"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewStudent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonFinalSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:onClick="FinalSubmit"
        android:background="@color/colorTextHint"
        android:text="@string/submit" />

</LinearLayout>