<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".TeacherSignIn">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/LinearLayoutCompact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textTeacherSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_signin"
            android:textSize="40sp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTeacherReLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTeacherReLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_userid"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTeacherRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTeacherRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonTeacherSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:background="@color/colorTextHint"
            android:text="@string/sign_in" />




    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>