<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewds"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".StudentLogin">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/LinearLayoutCompact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewDeleteStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="40dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutStudentDUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextReStudentDUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_userid"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>





        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonDeleteSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="SubmitStudentAttendance"
            android:background="@color/colorTextHint"
            android:text="@string/submit" />


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>